[package]
name = "rush-tunnel"
version = "1.0.0"
edition = "2021"
authors = ["Bom <prathanbomb@gmail.com>"]
description = "A command-line tool for creating SSH tunnels, allowing you to securely connect to remote hosts"
readme = "README.md"
repository = "https://github.com/prathanbomb/rush-tunnel"
license = "MIT"
keywords = ["tunnel", "ssh", "command-line", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
inquire = "0.7.5"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.83"
structopt = "0.3.26"
serde = { version = "1.0.202", features = ["derive"] }
dirs = "5.0.1"
toml = "0.8.13"
argon2 = "0.5.3"
chacha20poly1305 = "0.9.1"
rand_core = "0.6.4"
hex = "0.4.3"
rand = "0.8.5"